# porthos

./: .gitignore  README.md
cyton_description/: package.xml
cyton_description/robots/: cyton_description.urdf  cyton_gazebo_description.urdf
ompl_planning/: CMakeLists.txt  README.md  package.xml  pathAndControls.txt  visualizePath.m
ompl_planning/src/: Controller.cpp  measureEEF.cpp  porthos_base_planner_class.cpp
porthos_control/: CMakeLists.txt  README.md  package.xml
porthos_control/src/: gripper_server.cpp  test_claw.cpp
porthos_cyton_control/: CMakeLists.txt  package.xml
porthos_cyton_control/config/: controllers.yaml
porthos_cyton_control/src/: ps3_joy_interface.cpp
porthos_description/: CMakeLists.txt  README.md  package.xml
porthos_description/launch/: porthos_description.launch  porthos_display.launch  porthos_display.rviz  porthos_gazebo_sim.launch
porthos_description/meshes/: tampa2.STL
porthos_description/robots/: pioneer3at.xacro  pioneer3at_body.xacro  porthos_description.xacro  suporte_porthos_description.URDF  suporte_porthos_description.urdf
porthos_description/src/: wheel_publisher.cpp
porthos_description/worlds/: porthos.world
porthos_planning/: CMakeLists.txt  README.md  package.xml
porthos_planning/scenes/: tunnel2.scene
porthos_planning/src/: DADOSTESTE.txt  pick_place_tutorial.cpp  porthos_benchmark.cpp  porthos_moves.cpp  positions.txt
