<?xml version="1.0"?>
<package>
    <name>porthos_planning</name>
    <version>1.0.0</version>
    <description>This packages contains planning codes for Porthos</description>

    <maintainer email="waldezjr14@gmail.com">Waldez Junior</maintainer>
    <maintainer email="gabriel.araujo.5000@gmail.com">Gabriel Araujo</maintainer>

    <license>BSD</license>

    <author email="waldezjr14@gmail.com">Waldez Junior</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>pluginlib</build_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>moveit_ros_perception</build_depend>
    <build_depend>interactive_markers</build_depend>
    <build_depend>cmake_modules</build_depend>

    <run_depend>pluginlib</run_depend>
    <run_depend>moveit_core</run_depend>
    <run_depend>moveit_ros_planning_interface</run_depend>
    <run_depend>moveit_ros_perception</run_depend>
    <run_depend>interactive_markers</run_depend>
</package>
